@@ -1,3 +1,8 @@
+2010-08-18  Donal K. Fellows  <dkf@users.sf.net>
+
+	* library/safe.tcl (AliasGlob): [Bug 3004191]: Restore safe [glob] to
+	working condition.
+
 2010-08-15  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclProc.c (ProcWrongNumArgs): [Bug 3045010]: Make the
